ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserErrantSemicolonInClass1/input.ts.stderr
error: A `set` accessor must have a corresponding `get` accessor
  --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserErrantSemicolonInClass1/input.ts:15:12
   |
15 |     public set d() {
   |            ^^^

